# xearthlayer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  version.json
xearthlayer/: Cargo.toml  build.rs
xearthlayer-cli/: Cargo.toml
xearthlayer-cli/src/: error.rs  logging_init.rs  main.rs  runner.rs  tui_app.rs
xearthlayer-cli/src/commands/: cache.rs  common.rs  config.rs  diagnostics.rs  download.rs  mod.rs  patches.rs  publish.rs  run.rs  start.rs
xearthlayer-cli/src/commands/publish/: args.rs  handlers.rs  mod.rs  output.rs  services.rs  tests.rs  traits.rs
xearthlayer-cli/src/commands/setup/: mod.rs  wizard.rs
xearthlayer-cli/src/ui/: dashboard.rs  mod.rs
xearthlayer-cli/src/ui/dashboard/: mod.rs  render.rs  render_sections.rs  state.rs  utils.rs
xearthlayer-cli/src/ui/widgets/: aircraft_position.rs  cache.rs  control_plane.rs  errors.rs  input_output.rs  mod.rs  network.rs  pipeline.rs  prefetch_system.rs  scenery_system.rs
xearthlayer-cli/tests/: publish_workflow.rs
xearthlayer/src/: lib.rs  logging.rs  panic.rs  time.rs
xearthlayer/src/aircraft_position/: aggregator.rs  inference.rs  logger.rs  mod.rs  model.rs  provider.rs  state.rs
xearthlayer/src/aircraft_position/network/: adapter.rs  client.rs  config.rs  error.rs  mod.rs
xearthlayer/src/aircraft_position/telemetry/: mod.rs  protocol.rs
xearthlayer/src/aircraft_position/web_api/: adapter.rs  client.rs  config.rs  datarefs.rs  mod.rs  sim_state.rs
xearthlayer/src/airport/: index.rs  mod.rs  parser.rs
xearthlayer/src/cache/: config.rs  daemon.rs  disk.rs  disk_eviction.rs  gc_scheduler.rs  lru_index.rs  memory.rs  migrate.rs  mod.rs  path.rs  service.rs  stats.rs  system.rs  trait.rs  types.rs
xearthlayer/src/cache/adapters/: dds_disk_bridge.rs  memory_bridge.rs  (+1 more)
xearthlayer/src/config/: defaults.rs  download.rs  file.rs  keys.rs  mod.rs  parser.rs  settings.rs  size.rs  storage.rs  texture.rs  upgrade.rs  writer.rs  xplane.rs
xearthlayer/src/coord/: mod.rs  tests.rs  types.rs
xearthlayer/src/dds/: bc1.rs  bc3.rs  compressor.rs  conversion.rs  encoder.rs  gpu_channel.rs  header.rs  mipmap.rs  mod.rs  types.rs
xearthlayer/src/debug_map/: activity.rs  api.rs  map.html  mod.rs
xearthlayer/src/diagnostics/: mod.rs  report.rs
xearthlayer/src/executor/: active_job.rs  cache_adapter.rs  chunk_results.rs  client.rs  concurrency.rs  config.rs  context.rs  core.rs  daemon.rs  dispatch.rs  download_config.rs  executor.rs  handle.rs  job.rs  lifecycle.rs  mod.rs  resource_pool.rs  signals.rs  storage_limiter.rs  submitter.rs  telemetry.rs  traits.rs  watchdog.rs
xearthlayer/src/fuse/: async_passthrough.rs  client_adapter.rs  coalesce.rs  filename.rs  filesystem.rs  mod.rs  passthrough.rs  placeholder.rs
xearthlayer/src/geo_index/: index.rs  layers.rs  mod.rs  region.rs
xearthlayer/src/jobs/: cache_gc.rs  dds_generate.rs  factory.rs  mod.rs  tile_prefetch.rs
xearthlayer/src/log/: mod.rs  noop.rs  tracing_adapter.rs  trait.rs
xearthlayer/src/manager/: cache.rs  client.rs  disk_check.rs  error.rs  install_guard.rs  installer.rs  local.rs  mod.rs  mounts.rs  symlinks.rs  traits.rs  updates.rs
xearthlayer/src/metrics/: client.rs  daemon.rs  event.rs  mod.rs  optional.rs  reporter.rs  snapshot.rs  state.rs
xearthlayer/src/orchestrator/: download.rs  mod.rs  stats.rs
xearthlayer/src/ortho_union/: builder.rs  index.rs  parallel.rs  progress.rs
xearthlayer/src/package/: library.rs  metadata.rs  mod.rs  types.rs
xearthlayer/src/pipeline/: coalesce.rs  concurrency_limiter.rs  context.rs  error.rs  executor.rs  fd_budget.rs  http_limiter.rs  job.rs  mod.rs  priority_limiter.rs  processor.rs  runner.rs  storage.rs
xearthlayer/src/prefetch/: buffer.rs  builder.rs  circuit_breaker.rs  condition.rs  cone.rs  config.rs  coordinates.rs  error.rs  heading_aware.rs  inference.rs  intersection.rs  listener.rs  mod.rs  predictor.rs  prewarm.rs  radial.rs  scenery_cache.rs  scenery_index.rs  scheduler.rs  state.rs  strategy.rs  types.rs
xearthlayer/src/provider/: apple.rs  bing.rs  factory.rs  go2.rs  google.rs  http.rs  mapbox.rs  mod.rs  types.rs
xearthlayer/src/publisher/: config.rs  coverage.rs  metadata.rs  mod.rs  processor.rs
xearthlayer/src/runtime/: health.rs  mod.rs  orchestrator.rs  request.rs  tile_progress.rs
xearthlayer/src/scene_tracker/: mod.rs  model.rs  tracker.rs
xearthlayer/src/service/: builder.rs  cache_layer.rs  config.rs  dds_handler.rs  error.rs  facade.rs  fuse_mount.rs  mod.rs  network_logger.rs  orchestrator.rs  orchestrator_config.rs  prewarm.rs  runtime_builder.rs
xearthlayer/src/system/: filesystem.rs  gpu.rs  hardware.rs  mod.rs  recommendations.rs
xearthlayer/src/tasks/: assemble_image.rs  build_and_cache_dds.rs  cache_gc_batch.rs  cache_write.rs  download_chunks.rs  encode_dds.rs  mod.rs
xearthlayer/src/telemetry/: metrics.rs  snapshot.rs
xearthlayer/src/texture/: dds.rs  encoder.rs
xearthlayer/src/tile/: default.rs  error.rs  mod.rs  parallel.rs  request.rs
xearthlayer/src/update/: checker.rs  mod.rs
xearthlayer/src/xplane/: detection.rs  mod.rs  paths.rs
xearthlayer/tests/: aircraft_position_integration.rs  executor_integration.rs  gpu_pipeline_stress.rs  prefetch_integration.rs  scene_tracker_integration.rs
(+194 files in other folders)
