[workspace]
resolver = "2"
members = [
    "xearthlayer",
    "xearthlayer-cli",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["XEarthLayer Contributors"]
license = "MIT"
repository = "https://github.com/samsoir/xearthlayer"

[workspace.dependencies]
# Shared dependencies will be added here as needed
