[package]
name = "xearthlayer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "xearthlayer"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tracing-appender = "0.2"
fuser = "0.14"
libc = "0.2"
regex = "1.10"
thiserror = "1.0"
dirs = "5.0"
rust-ini = "0.21"
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
