[package]
name = "xearthlayer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "xearthlayer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tracing-appender = "0.2"
# FUSE libraries - fuse3 is the active implementation (async multi-threaded)
# fuser is retained for legacy type definitions but not used at runtime
fuser = "0.14"
fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2"
regex = "1.10"
thiserror = "1.0"
dirs = "5.0"
rust-ini = "0.21"
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
sha2 = "0.10"
futures = "0.3"
bytes = "1.11.0"
dashmap = "6.1"
tokio-util = "0.7"

[dev-dependencies]
proptest = "1.4"
rand = "0.9"
tempfile = "3.8"
futures = "0.3"
